# Vectorized-Movie-Search-Engine

./: Cargo.toml  README.md  flake.nix
docs/: DataQueeries_proposal.docx  data_flow.d2
src/: gui_main.rs  jina_colbert.py  main.rs
